--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,15 @@
 </head>
 <body>
     <h1>Home Page</h1>
+    <p class="codepen" data-height="600" data-theme-id="light"
+       data-default-tab="js,result" data-user="Mamboleoo" data-slug-hash="XWJPxpZ"
+       style="height: 380px; box-sizing: border-box; display: flex;
+       align-items: center; justify-content: center; border: 2px solid;
+       margin: 1em 0; padding: 1em;" data-pen-title="Walkers - How to">
+  <span>See the Pen <a href="https://codepen.io/Mamboleoo/pen/XWJPxpZ">
+  Walkers - How to</a> by Louis Hoebregts (<a href="https://codepen.io/Mamboleoo">@Mamboleoo</a>)
+  on <a href="https://codepen.io">CodePen</a>.</span>
+    </p>
+    <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
 </body>
 </html>
